# gh-actions-self-hosted-ecr

./: .dockerignore  .gitignore  Dockerfile  README.md  calculator.py  pyproject.toml  test_calculator.py
.github/workflows/: ci-self-hosted.yml
