[project]
name = "gh-actions-self-hosted-ecr"
version = "0.1.1"
description = "This project integrates GitHub Actions with self-hosted runners in any cloud to manage containerized workflows, emphasizing deployment to AWS Elastic Container Registry (ECR)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pytest>=8.3.5",
    "uvicorn>=0.34.2",
]
